<<<<<<< Updated upstream
[gd_scene load_steps=36 format=3 uid="uid://4cbpynvikrmh"]
=======
[gd_scene load_steps=40 format=3 uid="uid://4cbpynvikrmh"]
>>>>>>> Stashed changes

[ext_resource type="Script" path="res://controllers/fps_controller/fps_controller.gd" id="1_0fn47"]
[ext_resource type="AudioStream" uid="uid://bynj0q5svp4rj" path="res://Audios/Player/Flashlight/Click_1.mp3" id="2_sewi0"]
[ext_resource type="Script" path="res://Scripts/UI/interact_ray.gd" id="2_y0lgd"]
[ext_resource type="PackedScene" uid="uid://b6y6l08yg5cxe" path="res://controllers/weapon_manager/weapon_manager.tscn" id="3_ofn50"]
[ext_resource type="AudioStream" uid="uid://bxuyijbggpwnn" path="res://Audios/Player/Flashlight/Click_2.mp3" id="3_qp17n"]
[ext_resource type="AudioStream" uid="uid://c6rkmboqkjtlt" path="res://Audios/Player/Flashlight/Click_3.mp3" id="4_drpku"]
[ext_resource type="Script" path="res://Scripts/movement/state_machine.gd" id="5_h3u6d"]
[ext_resource type="AudioStream" uid="uid://dlm3jeouy8hxy" path="res://Audios/Player/Flashlight/Click_4.mp3" id="5_wp6yf"]
[ext_resource type="AudioStream" uid="uid://ctw54ou2c6kwk" path="res://Audios/Player/Flashlight/Click_5.mp3" id="6_66bgf"]
[ext_resource type="Script" path="res://Scripts/movement/idle_player_state.gd" id="6_cthcc"]
[ext_resource type="AudioStream" uid="uid://cg4j56t2lm2v3" path="res://Audios/Player/Flashlight/Click_6.mp3" id="7_cbe42"]
[ext_resource type="Script" path="res://Scripts/movement/walking_player_state.gd" id="7_uykxy"]
[ext_resource type="AudioStream" uid="uid://drr6ycqquf6yp" path="res://Audios/Player/Flashlight/Click_7.mp3" id="8_l1bkm"]
[ext_resource type="Script" path="res://Scripts/movement/sprinting_player_state.gd" id="8_y64dx"]
[ext_resource type="Script" path="res://Scripts/movement/crouching_player_state.gd" id="9_mvll2"]
[ext_resource type="AudioStream" uid="uid://b8omvn32tbvea" path="res://Audios/Player/Flashlight/Click_8.mp3" id="9_n138e"]
[ext_resource type="AudioStream" uid="uid://dyu6htwcth2a5" path="res://Audios/Player/Flashlight/Click_9.mp3" id="10_cxdcp"]
[ext_resource type="Script" path="res://Scripts/movement/sliding_player_state.gd" id="10_ojgis"]
[ext_resource type="AudioStream" uid="uid://c3irxsa5j8yxw" path="res://Audios/Player/Flashlight/Click_10.mp3" id="11_a0lwp"]
[ext_resource type="Script" path="res://Scripts/movement/jumping_player_state.gd" id="11_b4oom"]
[ext_resource type="Script" path="res://Scripts/movement/falling_player_state.gd" id="12_vs60y"]
[ext_resource type="Script" path="res://Scripts/WeaponViewport.gd" id="14_mjbge"]
[ext_resource type="Script" path="res://Scripts/WeaponCamera.gd" id="15_c2n5p"]
<<<<<<< Updated upstream
=======
[ext_resource type="Resource" uid="uid://t7ppj5xrrqfj" path="res://controllers/weapon_manager/Weapon/Amanremu/amanremu.tres" id="17_uh4t7"]
[ext_resource type="Resource" uid="uid://dr4khi2j5o4j2" path="res://controllers/weapon_manager/Weapon/Pistol/pistol.tres" id="24_1ngv6"]
[ext_resource type="Script" path="res://controllers/weapon_manager/weapon_resource.gd" id="25_ufhcn"]
[ext_resource type="PackedScene" uid="uid://hcmvusb6x1n1" path="res://Scenes/Pause Menu/pause_menu.tscn" id="30_dlo33"]
>>>>>>> Stashed changes
[ext_resource type="Script" path="res://Audios/player_audios.gd" id="30_f5fwt"]
[ext_resource type="AudioStream" uid="uid://tpf3n7p5bmqv" path="res://Audios/Player/Footsteps/Tile/Footsteps_Tile_Walk_01.wav" id="31_ovj2n"]
[ext_resource type="PackedScene" uid="uid://dmlq5yqj6gle2" path="res://controllers/hud/player_hud.tscn" id="32_q0axe"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_o26h5"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_5uvlm"]

[sub_resource type="Animation" id="Animation_ks4pg"]
resource_name = "Crouch"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.25, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.639871, 0), Vector3(0, 0.05, 0)]
}

[sub_resource type="Animation" id="Animation_4r7xp"]
resource_name = "JumpEnd"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.085, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.639871, 0), Vector3(0, 0.59, 0), Vector3(0, 0.639871, 0)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head:rotation:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0, -0.008, -0.024, -0.025, 0, 0.063, 0.001, 0, -0.256, -0.001, 0, 0),
"times": PackedFloat32Array(0, 0.085, 0.4)
}

[sub_resource type="Animation" id="Animation_jyg54"]
resource_name = "JumpStart"
length = 0.55
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.55),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.639871, 0), Vector3(0, 0.59, 0), Vector3(0, 0.639871, 0)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head:rotation:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.1, 0, -0.015, -0.1, 0, 0.25, 0, 0, -0.1, 0, 0.1, 0),
"times": PackedFloat32Array(0, 0.2, 0.55)
}

[sub_resource type="Animation" id="Animation_coin6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.639871, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Head:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ShapeCast3D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.5, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PlayerStateMachine/SlidingPlayerState:SPEED")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Head/Camera3D:fov")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [75.0]
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Head:rotation:x")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_xvwnn"]
resource_name = "Sliding"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.25, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.6, 0), Vector3(0, 0.1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Head:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 3, 4.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ShapeCast3D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.5, 0), Vector3(0, 0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PlayerStateMachine/SlidingPlayerState:SPEED")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [6.0, 4.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Head/Camera3D:fov")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.3, 4.33333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [75.0, 95.0, 75.0]
}
tracks/7/type = "method"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("PlayerStateMachine/SlidingPlayerState")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"finish"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tbcgx"]
_data = {
"Crouch": SubResource("Animation_ks4pg"),
"JumpEnd": SubResource("Animation_4r7xp"),
"JumpStart": SubResource("Animation_jyg54"),
"RESET": SubResource("Animation_coin6"),
"Sliding": SubResource("Animation_xvwnn")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_mspl4"]

[node name="CharacterBody3D" type="CharacterBody3D" node_paths=PackedStringArray("ANIMATIONPLAYER")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
floor_max_angle = 1.22173
script = ExtResource("1_0fn47")
ANIMATIONPLAYER = NodePath("AnimationPlayer")
click_audios = Array[AudioStream]([ExtResource("2_sewi0"), ExtResource("3_qp17n"), ExtResource("4_drpku"), ExtResource("5_wp6yf"), ExtResource("6_66bgf"), ExtResource("7_cbe42"), ExtResource("8_l1bkm"), ExtResource("9_n138e"), ExtResource("10_cxdcp"), ExtResource("11_a0lwp")])

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_o26h5")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CollisionShape3D"]
mesh = SubResource("CapsuleMesh_5uvlm")
skeleton = NodePath("../..")

[node name="Head" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.639871, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
cull_mask = 1047553
current = true

[node name="ReflectionProbe" type="ReflectionProbe" parent="Head/Camera3D"]
update_mode = 1

[node name="RayCast3D" type="RayCast3D" parent="Head/Camera3D"]
target_position = Vector3(0, 0, -1.505)
script = ExtResource("2_y0lgd")

[node name="Prompt" type="Label" parent="Head/Camera3D/RayCast3D"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.5
offset_top = -11.5
offset_right = 33.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Message"

[node name="RayAim" type="RayCast3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00600004, -0.0877767)
target_position = Vector3(0, 0, -100)
collision_mask = 2
collide_with_areas = true

[node name="RayAimEnd" type="Node3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -101.5)

[node name="TorchHolder" type="Node3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.639871, 0)

[node name="Torchloc" type="Node3D" parent="Head/TorchHolder"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)

[node name="Torch" type="Node3D" parent="Head/TorchHolder"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)
top_level = true

[node name="TorchLight" type="SpotLight3D" parent="Head/TorchHolder/Torch"]
visible = false
light_energy = 3.0
shadow_enabled = true
shadow_opacity = 0.8
spot_range = 15.0
spot_angle = 40.0
spot_angle_attenuation = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tbcgx")
}
blend_times = [&"JumpEnd", &"JumpStart", 0.1]

[node name="ShapeCast3D" type="ShapeCast3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("SphereShape3D_mspl4")
target_position = Vector3(0, 0.5, 0)

[node name="PlayerStateMachine" type="Node" parent="." node_paths=PackedStringArray("CURRENT_STATE")]
script = ExtResource("5_h3u6d")
CURRENT_STATE = NodePath("IdlePlayerState")

[node name="IdlePlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("6_cthcc")

[node name="WalkingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("7_uykxy")

[node name="SprintingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("8_y64dx")

[node name="CrouchingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("9_mvll2")

[node name="SlidingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("10_ojgis")
SPEED = null
SLIDE_ANIMATION_SPEED = 6.0

[node name="JumpingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("11_b4oom")

[node name="FallingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("12_vs60y")

[node name="Weapon" type="SubViewportContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="SubViewport" type="SubViewport" parent="Weapon"]
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4
script = ExtResource("14_mjbge")

[node name="Camera3D" type="Camera3D" parent="Weapon/SubViewport" node_paths=PackedStringArray("MAIN_CAMERA")]
cull_mask = 1047554
script = ExtResource("15_c2n5p")
MAIN_CAMERA = NodePath("../../../Head/Camera3D")

[node name="ViewModel" type="Node3D" parent="Weapon/SubViewport/Camera3D"]

[node name="WorldModel" type="Node3D" parent="."]

[node name="WeaponManager" parent="." node_paths=PackedStringArray("player", "bullet_raycast", "view_model_container", "world_model_container") instance=ExtResource("3_ofn50")]
<<<<<<< Updated upstream
=======
equipped_weapons = Array[ExtResource("25_ufhcn")]([ExtResource("24_1ngv6"), ExtResource("17_uh4t7")])
>>>>>>> Stashed changes
player = NodePath("..")
bullet_raycast = NodePath("../Head/Camera3D/RayAim")
view_model_container = NodePath("../Weapon/SubViewport/Camera3D/ViewModel")
world_model_container = NodePath("../WorldModel")

[node name="Timers" type="Node" parent="."]

[node name="TorchTimer" type="Timer" parent="Timers"]
wait_time = 0.3
one_shot = true

[node name="PlayerAudios" type="Node3D" parent="."]
script = ExtResource("30_f5fwt")

[node name="TorchClickSfx" type="AudioStreamPlayer3D" parent="PlayerAudios"]
volume_db = -23.0

[node name="FootstepSfx" type="AudioStreamPlayer3D" parent="PlayerAudios"]
stream = ExtResource("31_ovj2n")
attenuation_filter_db = -65.0

[node name="GroundCheck" type="RayCast3D" parent="PlayerAudios"]
target_position = Vector3(0, -1.5, 0)
debug_shape_custom_color = Color(1, 0, 1, 1)

[node name="PlayerHUD" parent="." node_paths=PackedStringArray("player", "weapon_manager") instance=ExtResource("32_q0axe")]
player = NodePath("..")
weapon_manager = NodePath("../WeaponManager")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Pause Menu" parent="CanvasLayer" instance=ExtResource("30_dlo33")]

[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_player_animation_started"]
